--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
+    "bulma-pricingtable": "^0.2.0",
     "gridsome": "^0.5.0"
   }
 }
