--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc4",
     "cross-env": "^5.2.0",
+    "graphql-tag": "^2.10.1",
     "nuxt": "^2.4.0",
-    "nuxt-buefy": "^0.3.2"
+    "nuxt-buefy": "^0.3.2",
+    "vue": "^2.6.10",
+    "vue-server-renderer": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
