--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,8 @@
     "graphql-tag": "^2.10.1",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2",
-    "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue-server-renderer": "2.6.10",
+    "vue-template-compiler": "2.6.10"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.0",
