--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "city-vote",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "bcrypt": "^3.0.5",
     "graphql-yoga": "^1.17.4",
