--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
 # Runtime data
 pids
 *.pid
@@ -82,3 +81,5 @@ dist
 
 # Service worker
 sw.*
+
+.DS_Store
