--- a/client/now.json
+++ b/client/now.json
@@ -4,12 +4,7 @@
   "builds": [
     {
       "src": "nuxt.config.js",
-      "use": "@nuxtjs/now-builder",
-      "config": {
-        "serverFiles": [
-          "middleware/**"
-        ]
-      }
+      "use": "@nuxtjs/now-builder"
     }
   ],
   "routes": [
