--- a/client/now.json
+++ b/client/now.json
@@ -4,7 +4,12 @@
   "builds": [
     {
       "src": "nuxt.config.js",
-      "use": "@nuxtjs/now-builder"
+      "use": "@nuxtjs/now-builder",
+      "config": {
+        "serverFiles": [
+          "modules.js"
+        ]
+      }
     }
   ],
   "routes": [
