--- a/server/now.json
+++ b/server/now.json
@@ -1,9 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "app.js", "use": "@now/node-server" }
-  ],
-  "routes": [
-    { "src": "/.*", "dest": "app.js" }
-  ]
+    "version": 2,
+    "name": "api",
+    "env": {
+        "IS_NOW": "true"
+    },
+    "builds": [{ "src": "api.js", "use": "@now/node-server@canary" }],
+    "routes": [{ "src": "/.*", "dest": "api.js" }]
 }
