--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "graphql-yoga": "^1.17.4",
-    "nuxt": "^2.6.1",
-    "prisma-client-lib": "^1.30.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
