--- a/server/now.json
+++ b/server/now.json
@@ -4,6 +4,6 @@
     "env": {
         "IS_NOW": "true"
     },
-    "builds": [{ "src": "api.js", "use": "@now/node-server@canary" }],
-    "routes": [{ "src": "/.*", "dest": "api.js" }]
+    "builds": [{ "src": "src/api.js", "use": "@now/node-server@canary" }],
+    "routes": [{ "src": "/.*", "dest": "src/api.js" }]
 }
