--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,17 @@
   "main": "api.js",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon api.js --ext js,graphql --exec babel-node"
+    "server": "nodemon src/api.js --ext js,graphql --exec babel-node",
+    "get-schema": "graphql get-schema -p prisma"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "graphql-cli": "^3.0.11",
     "graphql-yoga": "^1.17.4",
+    "prisma": "^1.30.0",
+    "prisma-binding": "^2.3.10",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
