--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,21 @@
 {
   "name": "minga-api",
   "version": "1.0.0",
-  "main": "api.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon src/api.js --ext js,graphql --exec babel-node",
+    "start": "env-cmd ./config/prod.env node dist/index.js",
+    "heroku-postbuild": "babel src --out-dir dist --copy-files",
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
     "get-schema": "graphql get-schema -p prisma"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "env-cmd": "^8.0.2",
     "graphql-cli": "^3.0.11",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
