--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,4 +1,4 @@
-endpoint: http://localhost:4466/prisma/dev
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.prisma
 secret: viXDp4H6A3owG37pdm7ptxzqLtkhTKNsJTV3nqRLDmQYyzu6K
 
