--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,11 +1,11 @@
 {
-    "projects" : {
-        "prisma" : {
-            "schemaPath" : "src/generated/prisma.graphql",
-            "extensions" : {
+    "projects": {
+        "prisma": {
+            "schemaPath": "src/generated/prisma.graphql",
+            "extensions": {
                 "prisma": "prisma/prisma.yml",
-                "endpoints" : {
-                    "default": "http://localhost:4466/prisma/dev/"
+                "endpoints": {
+                    "default": "https://beta-stylearth-3adb6ac753.herokuapp.com/api/dev"
                 }
             }
         }
