--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,3 +1,4 @@
-endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://eu1.prisma.sh/omo/omo-api/prod
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
