--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,4 +1,3 @@
-#endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://eu1.prisma.sh/omo/omo-api/prod
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
