--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -5,7 +5,7 @@
             "extensions": {
                 "prisma": "prisma/prisma.yml",
                 "endpoints": {
-                    "default": "https://beta-stylearth-3adb6ac753.herokuapp.com/api/dev"
+                    "default": "https://eu1.prisma.sh/omo/omo-prisma/dev"
                 }
             }
         }
