--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,4 +1,10 @@
-#endpoint: ${env:PRISMA_ENDPOINT}
 endpoint: https://eu1.prisma.sh/omo/omo-prisma/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
+# generate:
+#   - generator: javascript-client
+#     output: ../src/generated/
+
+# hooks:
+#   post-deploy:
+#     - prisma generate
