--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env",
+    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env",
+    "deploy-prisma-prod": "prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env",
     "test": "env-cmd ./config/test.env jest --watch"
   },
   "jest": {
