--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env",
+    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma reset -e config/dev.env -f && prisma seed --reset -e config/dev.env",
+    "seed": "prisma seed --reset -e config/dev.env",
     "deploy-prisma-prod": "prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env",
     "test": "env-cmd ./config/test.env jest --watch"
   },
@@ -29,8 +30,9 @@
     "graphql-cli": "^3.0.11",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^1.33.0",
-    "prisma-binding": "^2.3.10"
+    "prisma": "^1.32.0",
+    "prisma-binding": "^2.3.10",
+    "require": "^2.4.20"
   },
   "devDependencies": {
     "jest": "^23.5.0",
