--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,10 +1,6 @@
-endpoint: https://eu1.prisma.sh/omo/omo-prisma/dev
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
-# generate:
-#   - generator: javascript-client
-#     output: ../src/generated/
 
-# hooks:
-#   post-deploy:
-#     - yarn get-schema config/dev.env
+seed:
+  import: seed.graphql
