--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma reset -e config/dev.env -f && prisma seed --reset -e config/dev.env",
+    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma reset -e config/dev.env -f && prisma seed -e config/dev.env && prisma generate -e config/dev.env",
     "seed": "prisma seed --reset -e config/dev.env",
-    "deploy-prisma-prod": "prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env",
+    "deploy-prisma-prod": "prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env && prisma reset -e config/prod.env -f && prisma seed -e config/prod.env && prisma generate -e config/prod.env",
     "test": "env-cmd ./config/test.env jest --watch"
   },
   "jest": {
