--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma reset -e config/dev.env -f && prisma seed -e config/dev.env && prisma generate -e config/dev.env",
+    "deploy-prisma-dev": "prisma reset -e config/dev.env -f && prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma seed -e config/dev.env && prisma generate -e config/dev.env",
     "seed": "prisma seed --reset -e config/dev.env",
-    "deploy-prisma-prod": "prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env && prisma reset -e config/prod.env -f && prisma seed -e config/prod.env && prisma generate -e config/prod.env",
+    "deploy-prisma-prod": "prisma reset -e config/prod.env -f && prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env && prisma seed -e config/prod.env && prisma generate -e config/prod.env",
     "test": "env-cmd ./config/test.env jest --watch"
   },
   "jest": {
@@ -25,9 +25,11 @@
     "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "cross-fetch": "^3.0.2",
+    "dotenv": "^8.0.0",
     "env-cmd": "^8.0.2",
     "graphql": "^14.2.1",
     "graphql-cli": "^3.0.11",
+    "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^1.32.0",
