--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,6 +1,10 @@
 endpoint: ${env:PRISMA_ENDPOINT}
-datamodel: datamodel.graphql
+datamodel: dataModel.graphql
 secret: ${env:PRISMA_SECRET}
 
 seed:
   import: seed.graphql
+
+generate:
+  - generator: graphql-schema
+    output: ./src/generated/prisma
