--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
-    "presets": [
-        "env"
-    ],
-    "plugins": [
-        "transform-object-rest-spread"
-    ]
+  "presets": [
+    "@babel/env",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
+  ]
 }
-
