--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/index.js",
-    "heroku-postbuild": "babel src --out-dir dist --copy-files",
+    "heroku-postbuild": "yarn build:types && babel build --out-dir dist --copy-files --extensions \".ts,.tsx\"",
     "dev": "env-cmd ./config/dev.env nodemon -x ts-node src/index.ts --exec babel-node --extensions \".ts,.tsx\"",
     "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma generate -e config/dev.env",
     "deploy-prisma-dev:seed": "prisma reset -e config/dev.env -f && prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma seed -e config/dev.env && prisma generate -e config/dev.env",
