--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
-    "heroku-postbuild": "yarn build:types",
+    "start": "env-cmd ./config/prod.env node dist/index.js ",
+    "heroku-postbuild": "yarn tsc -d && babel build --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon -x ts-node src/index.ts --exec babel-node --extensions \".ts,.tsx\"",
     "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma generate -e config/dev.env",
     "deploy-prisma-dev:seed": "prisma reset -e config/dev.env -f && prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma seed -e config/dev.env && prisma generate -e config/dev.env",
-
     "seed": "prisma seed --reset -e config/dev.env",
     "deploy-prisma-prod": "prisma reset -e config/prod.env -f && prisma deploy -e config/prod.env && graphql get-schema -p prisma --dotenv config/prod.env && prisma seed -e config/prod.env && prisma generate -e config/prod.env",
     "test": "env-cmd ./config/test.env jest --watch",
@@ -46,7 +45,7 @@
     "@babel/node": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/aws-lambda": "^8.10.26",
