--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "globalTeardown": "./tests/jest/globalTeardown.js"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@types/ws": "^6.0.1",
     "apollo-boost": "^0.3.1",
     "bcryptjs": "^2.4.3",
