--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/polyfill": "^7.4.4",
     "@types/ws": "^6.0.1",
     "apollo-boost": "^0.3.1",
+    "apollo-server-core": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "cross-fetch": "^3.0.2",
     "dotenv": "^8.0.0",
