--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql": "^14.2.1",
     "graphql-cli": "^3.0.11",
     "graphql-import": "^0.7.1",
+    "graphql-shield": "^5.3.5",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^1.32.0",
