--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+      "baseUrl": ".",
+      "paths": { "*": ["types/*"] },
     /* Basic Options */
     // "incremental": true,                   /* Enable incremental compilation */
     "target": "esnext",
