--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-      "baseUrl": ".",
-      "paths": { "*": ["types/*"] },
-    /* Basic Options */
+    "baseUrl": ".",
+    "paths": {
+      "*": ["types/*"]
+    },
+    "skipLibCheck": true,
     // "incremental": true,                   /* Enable incremental compilation */
     "target": "esnext",
     /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
