--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@nuxtjs/axios": "^5.5.3",
     "@types/ws": "^6.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-server-core": "^2.6.1",
