Added proxy & updated auth

--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@nuxtjs/auth": "^4.6.3",
+    "@nuxtjs/axios": "^5.5.3",
     "@types/ws": "^6.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-server-core": "^2.6.1",
     "bcryptjs": "^2.4.3",
+    "cookieparser": "^0.1.0",
     "cross-fetch": "^3.0.2",
     "dotenv": "^8.0.0",
     "env-cmd": "^8.0.2",
@@ -37,6 +40,7 @@
     "graphql-import": "^0.7.1",
     "graphql-shield": "^5.3.5",
     "graphql-yoga": "^1.17.4",
+    "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^1.32.0",
     "prisma-binding": "^2.3.10",
