--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/polyfill": "^7.4.4",
     "@nuxtjs/auth": "^4.6.3",
     "@nuxtjs/axios": "^5.5.3",
+    "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-server-core": "^2.6.1",
@@ -45,7 +46,8 @@
     "nodemailer": "^6.2.1",
     "prisma": "^1.32.0",
     "prisma-binding": "^2.3.10",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
