--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "env-cmd ./config/prod.env node dist/index.js ",
     "heroku-postbuild": "yarn tsc -d && babel build --out-dir dist --copy-files",
-    "dev": "env-cmd ./config/dev.env nodemon -x ts-node src/index.ts --exec babel-node --extensions \".ts,.tsx,.graphql\"",
+    "dev": "env-cmd ./config/dev.env nodemon -x ts-node src/index.ts --exec babel-node --extensions \".ts,.tsx,\"",
     "deploy-prisma-dev": "prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env",
     "deploy-prisma-dev:seed": "prisma reset -e config/dev.env -f && prisma deploy -e config/dev.env && graphql get-schema -p prisma --dotenv config/dev.env && prisma seed -e config/dev.env",
     "seed": "prisma seed --reset -e config/dev.env",
